# asterisk-sandbox

./: .env.example  .gitignore  README.md  log-config.debug.json  log-config.json  pyproject.toml
api/: ami.py  calls.py  main.py  parsing.py  settings.py
api/static/: dashboard.css  dashboard.js  index.html
asterisk/: extensions.conf  logrotate.conf  manager.conf  manager.conf.template  pjsip.conf  pjsip.conf.template  queues.conf  systemd-env-override.conf
aws/: ssm-connect-policy.json
fail2ban/filter.d/: asterisk-pjsip.conf
fail2ban/jail.d/: asterisk-pjsip.local
nginx/: pbx.conf.template
notes/: adr-0001-softphone-api-auth-and-cors.md  adr-0002-sip-credential-convergence.md  contract.md  dashboard.md  setup.md  spec.md  ssm-access.md  testing.md  vps.md
scripts/: apply-repo.sh  aws-ssm-connect-setup.sh  aws-ssm-lockdown.sh  aws-ssm-setup.sh  certs.sh  fastapi.service  gen-configs.sh  gen_pjsip.py  link-configs.sh  provision.sh  render-configs.sh  setup.sh
scripts/hooks/: install.sh  pre-commit
tests/: test_ami.py  test_calls.py  test_gen_pjsip.py  test_parsing.py
